test/classes/initializers/errors/iteratorExitContextMethodCalled.chpl
class IteratorExitContext {
  proc enterContext() {}

  iter exitContext() {}
}

proc main() {
  var i = new IteratorExitContext();
  manage i {
    writeln("blah blah");
  }
}
