test/classes/initializers/errors/iteratorExitContextMethodCalled.good
iteratorExitContextMethodCalled.chpl:4: error: iterators can't be the exitContext method, please rename this iterator
